WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
91603
REGRESSION(
r117738
): [Forms] Default step base should be 0 (=1970-01) for input type month
https://bugs.webkit.org/show_bug.cgi?id=91603
Summary
REGRESSION(r117738): [Forms] Default step base should be 0 (=1970-01) for inp...
yosin
Reported
2012-07-18 02:02:26 PDT
Before
r117738
, default step base for input type month is defined in InputType::defaultStepBase() as 0 (=1970-01). On
r117738
, it is defined in MonthInputType::createStepRange and it is DateComponents::minimumMonth() (=0001-01).
Attachments
Patch 1
(2.25 KB, patch)
2012-07-18 02:16 PDT
,
yosin
no flags
Details
Formatted Diff
Diff
Patch 2
(2.26 KB, patch)
2012-07-18 02:40 PDT
,
yosin
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
yosin
Comment 1
2012-07-18 02:16:23 PDT
Created
attachment 152965
[details]
Patch 1
yosin
Comment 2
2012-07-18 02:17:21 PDT
Comment on
attachment 152965
[details]
Patch 1 Could you review this patch? Thanks in advance.
Kent Tamura
Comment 3
2012-07-18 02:37:59 PDT
Comment on
attachment 152965
[details]
Patch 1 View in context:
https://bugs.webkit.org/attachment.cgi?id=152965&action=review
> Source/WebCore/ChangeLog:11 > + No new tests. Existing test(fast/forms/month-stepup-stepdown-from-renderer.html)
fast/forms/month-stepup... -> fast/forms/month/month-stepup...
yosin
Comment 4
2012-07-18 02:40:59 PDT
Created
attachment 152972
[details]
Patch 2
yosin
Comment 5
2012-07-18 02:41:58 PDT
Comment on
attachment 152972
[details]
Patch 2 Could you review this patch? Thanks in advance. = Changes since last review = * Update path of existing test in ChangeLog
Kent Tamura
Comment 6
2012-07-18 02:45:26 PDT
Comment on
attachment 152972
[details]
Patch 2 ok
yosin
Comment 7
2012-07-18 02:47:36 PDT
Comment on
attachment 152972
[details]
Patch 2 Clearing flags on attachment: 152972 Committed
r122937
: <
http://trac.webkit.org/changeset/122937
>
yosin
Comment 8
2012-07-18 02:47:42 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug